{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 12,
  "lineage": "b422ba84-899c-e78b-9eca-c98a63c685e8",
  "resources": [
    {
      "module": "module.aws_security_groups_Chennai",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.aws_security_groups_Chennai.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:682835670611:security-group/sg-056081a407724cc34",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-056081a407724cc34",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5883,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5883
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              }
            ],
            "name": "terraform-20200217140503740800000001",
            "name_prefix": null,
            "owner_id": "682835670611",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HCL_Dryice_SG_Chennai"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c9cf0d5b66dce69"
          }
        }
      ]
    },
    {
      "module": "module.aws_security_groups_Noida",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.aws_security_groups_Noida.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:682835670611:security-group/sg-0f83ef92dee4da2a9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f83ef92dee4da2a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5883,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5883
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              }
            ],
            "name": "terraform-20200217140503739700000001",
            "name_prefix": null,
            "owner_id": "682835670611",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HCL_Dryice_SG_Noida"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c9cf0d5b66dce69"
          }
        }
      ]
    }
  ]
}